ingress/apple-pod.yaml
kind: Pod
apiVersion: v1
metadata:
  name: apple-app
  namespace: jenkins
  labels:
    app: apple
spec:
  containers:
    - name: apple-app
      image: hashicorp/http-echo
      args:
        - "-text=apple-in-jenkins-ns"
