ingress/apple-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: apple-service
  namespace: jenkins
spec:
  selector:
    app: apple
  ports:
    - port: 5678 # Default port for image
